--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,8 +1,8 @@
 version: 0.2
 env:
   parameter-store:
-    key: "value"
-    key: "value"
+    AWS_ACCOUNT_ID: "value"
+    IMAGE_REPO_NAME: ""
     
 phases:
   install:
@@ -14,15 +14,17 @@ phases:
     commands:
       - echo "Installing dependencies"
       - pip install -r requirements.txt
+      - echo "Logging in to Amazon ECR..."
+      - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.us-east-1.amazonaws.com
     # steps:
   build:
     commands:
       - echo "Building Docker Image"
-      # Add ECR login id password and command
-      - echo "$ECR_PASSWORD" | docker login -u "$ECR_USERNAME" --password-stdin "$ECR_URL"
+      - docker build -t $IMAGE_REPO_NAME:latest .
       # docker build -t "Path to ecr repo"
-      - docker build -t ""
-      - docker push "$DOCKER_REGISTRY_URL/$DOCKER_REGISTRY_USERNAME/simple-python-flask-app:latest"
+      - docker tag $IMAGE_REPO_NAME:latest $AWS_ACCOUNT_ID.dkr.ecr.us-east-1.amazonaws.com/$IMAGE_REPO_NAME:latest
+      - echo Pushing the Docker image...
+      - docker push $AWS_ACCOUNT_ID.dkr.ecr.us-east-1.amazonaws.com/$IMAGE_REPO_NAME:latest
 
     # steps:
   post_build:
