--- a/buildspec.yml
+++ b/buildspec.yml
@@ -19,10 +19,10 @@ phases:
   build:
     commands:
       - echo "Building Docker Image"
-      - docker build -t $IMAGE_REPO_NAME:v1 .
-      - docker tag $IMAGE_REPO_NAME:v1 $AWS_ACCOUNT_ID.dkr.ecr.us-east-1.amazonaws.com/$IMAGE_REPO_NAME:v1
+      - docker build -t $IMAGE_REPO_NAME .
+      - docker tag $IMAGE_REPO_NAME $AWS_ACCOUNT_ID.dkr.ecr.us-east-1.amazonaws.com/$IMAGE_REPO_NAME
       - echo "Pushing the Docker image"
-      - docker push $AWS_ACCOUNT_ID.dkr.ecr.us-east-1.amazonaws.com/$IMAGE_REPO_NAME:v1
+      - docker push $AWS_ACCOUNT_ID.dkr.ecr.us-east-1.amazonaws.com/$IMAGE_REPO_NAME
       
   post_build:
     commands:
