--- a/buildspec.yml
+++ b/buildspec.yml
@@ -19,8 +19,8 @@ phases:
   build:
     commands:
       - echo "Building Docker Image"
-      - docker build -t $IMAGE_REPO_NAME .
-      - docker tag $IMAGE_REPO_NAME $AWS_ACCOUNT_ID.dkr.ecr.us-east-1.amazonaws.com/$IMAGE_REPO_NAME
+      - docker build -t threetierapp .
+      - docker tag threetierapp $AWS_ACCOUNT_ID.dkr.ecr.us-east-1.amazonaws.com/$IMAGE_REPO_NAME
       - echo "Pushing the Docker image"
       - docker push $AWS_ACCOUNT_ID.dkr.ecr.us-east-1.amazonaws.com/$IMAGE_REPO_NAME
       
