--- a/buildspec.yml
+++ b/buildspec.yml
@@ -17,9 +17,9 @@ phases:
     commands:
       - echo "Running tests..."
       - echo "Building Docker image..."
-      - echo "$DOCKER_REGISTRY_PASSWORD" | docker login -u "$DOCKER_REGISTRY_USERNAME" --password-stdin "$DOCKER_REGISTRY_URL"
-      - docker build -t "$DOCKER_REGISTRY_URL/$DOCKER_REGISTRY_USERNAME/simple-python-flask-app:latest" .
-      - docker push "$DOCKER_REGISTRY_URL/$DOCKER_REGISTRY_USERNAME/simple-python-flask-app:latest"
+      - echo "$DOCKER_REGISTRY_PASSWORD" | docker login -u "$DOCKER_REGISTRY_USERNAME" --password-stdin "https://hub.docker.com/"
+      - docker build -t "https://hub.docker.com/repositories/vrushalinehe9/simple-python-flask-app:latest" .
+      - docker push "https://hub.docker.com/repositories/vrushalinehe9/simple-python-flask-app:latest"
   post_build:
     commands:
       - echo "Build completed successfully!"
