--- a/buildspec.yml
+++ b/buildspec.yml
@@ -17,7 +17,7 @@ phases:
     commands:
       - echo "Running tests..."
       - echo "Building Docker image..."
-      - echo "$DOCKER_REGISTRY_PASSWORD" | docker login -u "$DOCKER_REGISTRY_USERNAME" --password-stdin
+      - echo "$DOCKER_REGISTRY_PASSWORD" | docker login -u "vrushalinehe9" --password-stdin
       - docker build -t "https://hub.docker.com/repositories/vrushalinehe9/simple-python-flask-app:latest" .
       - docker push "https://hub.docker.com/repositories/vrushalinehe9/simple-python-flask-app:latest"
   post_build:
