--- a/buildspec.yml
+++ b/buildspec.yml
@@ -18,7 +18,8 @@ phases:
       - echo "Running tests..."
       - echo "Building Docker image..."
       - echo "$DOCKER_REGISTRY_PASSWORD" | docker login -u "vrushalinehe9" --password-stdin
-      - docker build -t "https://hub.docker.com/repositories/vrushalinehe9/simple-python-flask-app:latest" .
+      - docker build -t "simple-python-flask-app:latest" .
+      - docker tag "simple-python-flask-app:latest" "https://hub.docker.com/repositories/vrushalinehe9/simple-python-flask-app:latest"
       - docker push "https://hub.docker.com/repositories/vrushalinehe9/simple-python-flask-app:latest"
   post_build:
     commands:
