--- a/buildspec.yml
+++ b/buildspec.yml
@@ -18,9 +18,9 @@ phases:
       - echo "Running tests..."
       - echo "Building Docker image..."
       - echo "$DOCKER_REGISTRY_PASSWORD" | docker login -u "vrushalinehe9" --password-stdin
-      - docker build -t "simple-python-flask-app:latest" .
-      - docker tag "simple-python-flask-app:latest" "docker.io/vrushalinehe9/simple-python-flask-app:latest"
-      - docker push "docker.io/vrushalinehe9/simple-python-flask-app:latest"
+      - docker build -t "backend:latest" .
+      - docker tag "backend:latest" "docker.io/vrushalinehe9/backend:latest"
+      - docker push "docker.io/vrushalinehe9/backend:latest"
   post_build:
     commands:
       - echo "Build completed successfully!"
