--- a/appspec.yml
+++ b/appspec.yml
@@ -3,10 +3,10 @@ os: linux
 
 hooks:
   AfterInstall:
-    - location: scripts/start_container.sh
+    - location: start_container.sh
       timeout: 300
       runas: root
   ApplicationStop:
-    - location: scripts/stop_container.sh
+    - location: stop_container.sh
       timeout: 300
       runas: root
